--- a/style.css
+++ b/style.css
@@ -250,3 +250,138 @@ h2{
     border-top: 1px solid #fff;
     opacity: 0.4;
 }
+
+.music-player{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.album{
+    width: 25%;
+    background-color:#000;
+    height: 72px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.al-img{
+    height: 3.5rem;
+    margin: 1rem;
+}
+
+.al-title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.al-p{
+    margin: 1rem;
+}
+
+.album-icon{
+    height: 2rem;
+    display: flex;
+    margin-right: 2rem;
+}
+
+.album-icon img{
+    margin-right: 1rem;
+}
+
+.player{
+    width: 50%;
+    /* background-color: orange; */
+}
+
+
+.player-controls{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.player-control-icon{
+    height: 1rem;
+    margin-right: 1.75rem;
+    opacity: 0.7;
+}
+
+.player-control-icon:hover{
+    opacity: 1;
+}
+
+.playback-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.progress-bar{
+    width: 70%;
+    appearance: none;
+    background-color: transparent;
+    cursor: pointer;
+
+}
+
+.progress-bar::-webkit-slider-runnable-track {
+    background-color: #ddd;
+    border-radius: 100px;
+    height: 0.2rem;
+
+}
+
+.progress-bar::-webkit-slider-thumb{
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    background-color: #269308;
+    border-radius: 50%;
+    margin-top: -6px;
+}
+
+.controls{
+    width: 25%;
+    background-color: #000;
+    height: 72px;
+    display: flex;
+    align-items: center;
+    
+}
+
+.controls-icon{
+    display: flex;
+}
+
+.controls-icon img{
+    height: 1.5rem;
+    margin-left:1rem;
+}
+
+
+.vol-bar{
+    appearance: none;
+    background-color: transparent;
+    cursor: pointer;
+    margin-left: 0.5rem;
+}
+
+.vol-bar::-webkit-slider-runnable-track {
+    /* background-color: #ddd; */
+    /* border-radius: 100px; */
+    height: 0.2rem;
+
+}
+
+.vol-bar::-webkit-slider-thumb{
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    background-color: #269308;
+    border-radius: 50%;
+    margin-top: -6px;
+}
